--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@ html, body, #root {
   width: 100%;
   height: 100%;
 }
+
 body {
   background: #eee url("https://www.transparenttextures.com/patterns/cubes.png");
   padding: 0;
@@ -20,14 +21,16 @@ body {
 header {
   background-color: $primaryColor;
   margin: auto -16px;
-  padding: 0.75rem 2rem;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+  padding: 0.2rem 2rem;
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.6);
 }
 
 header h1 {
-  color: #fff;
+  color: $secondaryColor;
   font-family: "McLaren", cursive;
   font-weight: 200;
+  display: flex;
+  align-items: center;
 }
 
 footer {
@@ -41,6 +44,7 @@ footer {
 footer p {
   color: #ccc;
 }
+
 .note {
   background: #fff;
   border-radius: 7px;
@@ -50,10 +54,12 @@ footer p {
   margin: 16px;
   float: left;
 }
+
 .note h1 {
   font-size: 1.1em;
   margin-bottom: 6px;
 }
+
 .note p {
   font-size: 1.1em;
   margin-bottom: 10px;
@@ -82,6 +88,7 @@ form.create-note {
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
 }
+
 form.create-note input,
 form.create-note textarea {
   width: 100%;
@@ -92,6 +99,7 @@ form.create-note textarea {
   font-family: inherit;
   resize: none;
 }
+
 form.create-note button {
   position: absolute;
   right: 18px;
