--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,12 @@
 $primaryColor: #207be6;
 $secondaryColor: #eee;
-
+$hoverColor: #d5d5d5;
+@mixin maxWidth {
+  max-width: 1440px;
+  width: 100%;
+  margin: auto;
+  padding: 0 5%;
+}
 
 * {
   box-sizing: border-box;
@@ -10,6 +16,7 @@ html, body, #root {
   font-family: "Montserrat", sans-serif;
   width: 100%;
   height: 100%;
+  margin: 0;
 }
 
 body {
@@ -20,9 +27,15 @@ body {
 
 header {
   background-color: $primaryColor;
-  margin: auto -16px;
-  padding: 0.2rem 2rem;
+  margin: auto 0;
   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.6);
+  .header-wrapper{
+    @include maxWidth;
+  }
+}
+
+.notes-list{
+  @include maxWidth;
 }
 
 header h1 {
@@ -31,6 +44,9 @@ header h1 {
   font-weight: 200;
   display: flex;
   align-items: center;
+  margin-top: 0;
+  padding: 0.5rem 0;
+  margin-bottom: 0.5rem;
 }
 
 footer {
@@ -49,15 +65,21 @@ footer p {
   background: #fff;
   border-radius: 7px;
   box-shadow: 0 2px 5px #ccc;
-  padding: 10px;
-  width: 240px;
-  margin: 16px;
+  padding: 1rem 1.5rem;
+  min-width: 20rem;
   float: left;
+  width: 100%;
+  margin: 0.5rem 0;
+  @media (min-width: 768px){
+    margin: 16px;
+    width: initial;
+  }
 }
 
 .note h1 {
   font-size: 1.1em;
   margin-bottom: 6px;
+  margin-top: 0;
 }
 
 .note p {
@@ -77,20 +99,27 @@ footer p {
   height: 36px;
   cursor: pointer;
   outline: none;
+  transition: all 0.6s ease-out;
+  &:hover{
+    background-color: $primaryColor;
+    *{
+      fill: $hoverColor;
+    }
+  }
 }
 
 form.create-note {
   position: relative;
-  width: 480px;
+  width: 36rem;
+  max-width: 90%;
   margin: 3rem auto 20px auto;
   background: #fff;
-  padding: 15px;
+  padding: 4px 15px;
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
 }
 
-form.create-note input,
-form.create-note textarea {
+form.create-note input, textarea {
   width: 100%;
   border: none;
   padding: 4px;
