--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@ $primaryColor: #207be6;
 $secondaryColor: #eee;
 $hoverColor: #d5d5d5;
 @mixin maxWidth {
-  max-width: 1440px;
+  max-width: 1920px;
   width: 100%;
   margin: auto;
   padding: 0 5%;
@@ -13,7 +13,7 @@ $hoverColor: #d5d5d5;
 }
 
 html, body, #root {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", "Helvetica Neue", sans-serif;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -29,13 +29,16 @@ header {
   background-color: $primaryColor;
   margin: auto 0;
   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.6);
-  .header-wrapper{
+
+  .header-wrapper {
     @include maxWidth;
   }
 }
 
-.notes-list{
+.notes-list {
   @include maxWidth;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 header h1 {
@@ -66,26 +69,31 @@ footer p {
   border-radius: 7px;
   box-shadow: 0 2px 5px #ccc;
   padding: 1rem 1.5rem;
-  min-width: 20rem;
+  min-width: 18rem;
   float: left;
   width: 100%;
   margin: 0.5rem 0;
-  @media (min-width: 768px){
+  @media (min-width: 576px) {
     margin: 16px;
     width: initial;
   }
 }
 
 .note h1 {
-  font-size: 1.1em;
+  font-family: 'Open Sans', 'Roboto', Arial, sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5rem;
   margin-bottom: 6px;
   margin-top: 0;
+  letter-spacing: .00625em;
 }
 
 .note p {
-  font-size: 1.1em;
+  font-size: 1.125rem;
   margin-bottom: 10px;
   white-space: pre-wrap;
+  font-weight:400;
   word-wrap: break-word;
 }
 
@@ -100,9 +108,11 @@ footer p {
   cursor: pointer;
   outline: none;
   transition: all 0.6s ease-out;
-  &:hover{
+
+  &:hover {
     background-color: $primaryColor;
-    *{
+
+    * {
       fill: $hoverColor;
     }
   }
